--- a/src/styles/GalleryPage.module.css
+++ b/src/styles/GalleryPage.module.css
@@ -1,4 +1,3 @@
-.gallery-page {
-  padding: 0px
-
+.galleryPage {
+  padding-left: 2rem
 }
